--- a/index2.html
+++ b/index2.html
@@ -1,105 +1,19 @@
----
-
-#################################
-
-#################################
-
-## Super Linter GitHub Actions ##
-
-#################################
-
-#################################
-
-name: Lint Code Base
-
-
-
-#
-
-# Documentation:
-
-# https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions
-
-#
-
-
-
-#############################
-
-# Start the job on all push #
-
-#############################
-
-on:
-
-  push:
-
-  pull_request:
-
-    branches: [master, main]
-
-
-
-###############
-
-# Set the Job #
-
-###############
-
-jobs:
-
-  build:
-
-    # Name the Job
-
-    name: Lint Code Base
-
-    # Set the agent to run on
-
-    runs-on: ubuntu-latest
-
-
-
-    ##################
-
-    # Load all steps #
-
-    ##################
-
-    steps:
-
-      ##########################
-
-      # Checkout the code base #
-
-      ##########################
-
-      - name: Checkout Code
-
-        uses: actions/checkout@v3
-
-        with:
-
-          # Full git history is needed to get a proper list of changed files within `super-linter`
-
-          fetch-depth: 0
-
-
-
-      ################################
-
-      # Run Linter against code base #
-
-      ################################
-
-      - name: Lint Code Base
-
-        uses: github/super-linter@v4
-
-        env:
-
-          VALIDATE_ALL_CODEBASE: false
-
-          DEFAULT_BRANCH: master
-
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+  <title>My Project</title>
+</head>
+<body>
+  <form action="#">
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+      <input class="mdl-textfield__input" type="text" id="sample3">
+      <label class="mdl-textfield__label" for="sample3">Text...</label>
+    </div>
+  </form>
+</body>
+</html>
