--- a/index2.html
+++ b/index2.html
@@ -15,5 +15,9 @@
       <label class="mdl-textfield__label" for="sample3">Text...</label>
     </div>
   </form>
+  <!-- Flat button with ripple -->
+  <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+    Button
+  </button>
 </body>
 </html>
