--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-yellow.min.css" />
   <meta charset="UTF-8">
   <link scr="stylesheet" href="css/styles.css">
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
