--- a/index2.html
+++ b/index2.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-yellow.min.css" />
-  <meta charset="UTF-8">
   <link scr="stylesheet" href="css/styles.css">
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <title>My Project</title>
+    <link rel="stylesheet"     href="https://code.getmdl.io/1.3.0/material.amber-lime.min.css" />
+  <meta charset="UTF-8">
 </head>
 <body>
   <form action="#">
@@ -17,9 +17,9 @@
       <label class="mdl-textfield__label" for="sample3">Text...</label>
     </div>
   </form>
-  <!-- Flat button with ripple -->
-  <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
-    Button
+  <!-- Colored FAB button with ripple -->
+  <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+    <i class="material-icons">add</i>
   </button>
   <!-- Simple header with scrollable tabs. -->
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -63,22 +63,51 @@
     </main>
   </div>
   <!-- Simple list -->
-  <ul class="demo-list-item mdl-list">
-    <li class="mdl-list__item">
+  <style>
+  .demo-list-item {
+    width: 300px;
+  }
+  </style>
+  
+  <!-- Two Line List with secondary info and action -->
+<style>
+.demo-list-two {
+  width: 300px;
+}
+</style>
+
+<ul class="demo-list-two mdl-list">
+  <li class="mdl-list__item mdl-list__item--two-line">
+    <span class="mdl-list__item-primary-content">
+      <i class="material-icons mdl-list__item-avatar">person</i>
+      <span>Bryan Cranston</span>
+      <span class="mdl-list__item-sub-title">62 Episodes</span>
+    </span>
+    <span class="mdl-list__item-secondary-content">
+      <span class="mdl-list__item-secondary-info">Actor</span>
+      <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">star</i></a>
+    </span>
+    </li>
+    <li class="mdl-list__item mdl-list__item--two-line">
       <span class="mdl-list__item-primary-content">
-        Bryan Cranston
+        <i class="material-icons mdl-list__item-avatar">person</i>
+        <span>Aaron Paul</span>
+        <span class="mdl-list__item-sub-title">62 Episodes</span>
+      </span>
+      <span class="mdl-list__item-secondary-content">
+        <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">star</i></a>
       </span>
     </li>
-    <li class="mdl-list__item">
+    <li class="mdl-list__item mdl-list__item--two-line">
       <span class="mdl-list__item-primary-content">
-        Aaron Paul
+        <i class="material-icons mdl-list__item-avatar">person</i>
+        <span>Bob Odenkirk</span>
+        <span class="mdl-list__item-sub-title">62 Episodes</span>
+      </span>
+      <span class="mdl-list__item-secondary-content">
+        <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">star</i></a>
       </span>
     </li>
-    <li class="mdl-list__item">
-      <span class="mdl-list__item-primary-content">
-        Bob Odenkirk
-      </span>
-    </li>
-  </ul>
+</ul>
 </body>
 </html>
