--- a/index2.html
+++ b/index2.html
@@ -1,113 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link scr="stylesheet" href="css/styles.css">
-  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-  <title>My Project</title>
-    <link rel="stylesheet"     href="https://code.getmdl.io/1.3.0/material.amber-lime.min.css" />
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-  <form action="#">
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <input class="mdl-textfield__input" type="text" id="sample3">
-      <label class="mdl-textfield__label" for="sample3">Text...</label>
-    </div>
-  </form>
-  <!-- Colored FAB button with ripple -->
-  <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-    <i class="material-icons">add</i>
-  </button>
-  <!-- Simple header with scrollable tabs. -->
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-      <div class="mdl-layout__header-row">
-        <!-- Title -->
-        <span class="mdl-layout-title">Title</span>
-      </div>
-      <!-- Tabs -->
-      <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-        <a href="#scroll-tab-1" class="mdl-layout__tab is-active">Tab 1</a>
-        <a href="#scroll-tab-2" class="mdl-layout__tab">Tab 2</a>
-        <a href="#scroll-tab-3" class="mdl-layout__tab">Tab 3</a>
-        <a href="#scroll-tab-4" class="mdl-layout__tab">Tab 4</a>
-        <a href="#scroll-tab-5" class="mdl-layout__tab">Tab 5</a>
-        <a href="#scroll-tab-6" class="mdl-layout__tab">Tab 6</a>
-      </div>
-    </header>
-    <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Title</span>
-    </div>
-    <main class="mdl-layout__content">
-      <section class="mdl-layout__tab-panel is-active" id="scroll-tab-1">
-        <div class="page-content"><!-- Your content goes here --></div>
-      </section>
-      <section class="mdl-layout__tab-panel" id="scroll-tab-2">
-        <div class="page-content"><!-- Your content goes here --></div>
-      </section>
-      <section class="mdl-layout__tab-panel" id="scroll-tab-3">
-        <div class="page-content"><!-- Your content goes here --></div>
-      </section>
-      <section class="mdl-layout__tab-panel" id="scroll-tab-4">
-        <div class="page-content"><!-- Your content goes here --></div>
-      </section>
-      <section class="mdl-layout__tab-panel" id="scroll-tab-5">
-        <div class="page-content"><!-- Your content goes here --></div>
-      </section>
-      <section class="mdl-layout__tab-panel" id="scroll-tab-6">
-        <div class="page-content"><!-- Your content goes here --></div>
-      </section>
-    </main>
-  </div>
-  <!-- Simple list -->
-  <style>
-  .demo-list-item {
-    width: 300px;
-  }
-  </style>
   
-  <!-- Two Line List with secondary info and action -->
-<style>
-.demo-list-two {
-  width: 300px;
-}
-</style>
-
-<ul class="demo-list-two mdl-list">
-  <li class="mdl-list__item mdl-list__item--two-line">
-    <span class="mdl-list__item-primary-content">
-      <i class="material-icons mdl-list__item-avatar">person</i>
-      <span>Bryan Cranston</span>
-      <span class="mdl-list__item-sub-title">62 Episodes</span>
-    </span>
-    <span class="mdl-list__item-secondary-content">
-      <span class="mdl-list__item-secondary-info">Actor</span>
-      <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">star</i></a>
-    </span>
-    </li>
-    <li class="mdl-list__item mdl-list__item--two-line">
-      <span class="mdl-list__item-primary-content">
-        <i class="material-icons mdl-list__item-avatar">person</i>
-        <span>Aaron Paul</span>
-        <span class="mdl-list__item-sub-title">62 Episodes</span>
-      </span>
-      <span class="mdl-list__item-secondary-content">
-        <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">star</i></a>
-      </span>
-    </li>
-    <li class="mdl-list__item mdl-list__item--two-line">
-      <span class="mdl-list__item-primary-content">
-        <i class="material-icons mdl-list__item-avatar">person</i>
-        <span>Bob Odenkirk</span>
-        <span class="mdl-list__item-sub-title">62 Episodes</span>
-      </span>
-      <span class="mdl-list__item-secondary-content">
-        <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">star</i></a>
-      </span>
-    </li>
-</ul>
 </body>
 </html>
