--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,26 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>
+    Countries
+  </h1>
+  <h2>
+    Canada
+  </h2>
+  <h3>
+    Capital: Ottawa
+  </h3>
+  <h2>
+    United States
+  </h2>
+  <h3>
+    Capital: Washington D.C
+  </h3>
+  <h2>
+    Mexico
+  </h2>
+  <h3>
+    Capital: Mexico City
+  </h3>
 </body>
 </html>
