--- a/index2.html
+++ b/index2.html
@@ -3,29 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Countries Around the World</title>
 </head>
 <body>
   <h1>
     Countries
   </h1>
+  
   <h2>
     Canada
   </h2>
-  <h3>
-    Capital: Ottawa
-  </h3>
+  
+  <div>
+    <h3>
+      Capital: Ottawa
+    </h3>
+  </div>
+  
   <h2>
     United States
   </h2>
-  <h3>
-    Capital: Washington D.C
-  </h3>
+  
+  <div>
+    <h3>
+      Capital: Washington D.C
+    </h3>
+    <img src="Images/GettyImages-497322993-598b2ad403f4020010ae0a08.jpg" alt="Image of Washington D.C">
+  </div>
+
   <h2>
     Mexico
-  </h2>
-  <h3>
-    Capital: Mexico City
-  </h3>
+  </h2>    
+  <div>
+    <h3>
+      Capital: Mexico City
+    </h3>
+    <img src="Images/Mexico City.jpg" alt="Image of Mexico City">
+  </div>
 </body>
 </html>
